# -

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: 00-项目总览.md  01-开发全流程指南.md  02-技术栈选型详解.md  03-产品需求文档PRD.md  04-系统架构设计.md  05-数据库设计.md  06-接口设计.md  07-AI协作指南.md  08-开发进度追踪.md  09-UI设计提示词.md  10-Live2D形象系统.md
public/models/haru/Haru/: haru.model3.json  haru_greeter_t03.cdi3.json
scripts/: auto-push.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/activity/: classifier.rs  mod.rs  monitor.rs  sensor.rs
src-tauri/src/ai/: context.rs  mod.rs  provider.rs
src-tauri/src/commands/: activity.rs  chat.rs  config.rs  memory.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/db/repos/: activity.rs  config.rs  memories.rs  messages.rs  mod.rs  reminders.rs  sessions.rs
src-tauri/src/memory/: extractor.rs  mod.rs
src-tauri/tests/: integration_test.rs
src/api/: activity.ts  chat.ts  config.ts  index.ts  memory.ts
src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx
src/components/common/: TitleBar.tsx
src/components/live2d/: BubbleMessage.tsx  Live2DView.tsx
src/components/settings/: SettingsPanel.tsx
src/hooks/: useActivity.ts  useChat.ts
src/types/: index.ts
